--- a/18 Class .ipynb
+++ b/18 Class .ipynb
@@ -795,9 +795,662 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "847c89b8-09e5-46b8-b6ff-ea91b7c2b4eb",
+   "metadata": {},
+   "source": [
+    "# magic functions\n",
+    "## special functions of class\n",
+    "### init\n",
+    "### str\n",
+    "### del"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "3529f4b1-37a8-4381-83a2-2111238f2af8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Account():\n",
+    "    BANK_NAME = \"SBI\"\n",
+    "\n",
+    "    def __init__(self, name, initialDeposit= 0):\n",
+    "        # runs when object is created\n",
+    "        self.name= name\n",
+    "        self.balance = initialDeposit\n",
+    "        print(f'{self.name} welcome to {self.BANK_NAME}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "ea4dd943-0173-41f1-a44c-140f442796c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tanuj welcome to SBI\n"
+     ]
+    }
+   ],
+   "source": [
+    "pehlaAccount = Account('tanuj', 50000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "41b06197-2667-4f8c-a9d6-56b97970859a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'tanuj'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pehlaAccount.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "91524cde-2035-40d1-b7af-9317698c31dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50000"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pehlaAccount.balance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "ad4fa429-f81e-43d7-960e-2953abab8aba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Account():\n",
+    "    BANK_NAME = \"SBI\"\n",
+    "\n",
+    "    def __init__(self, name, initialDeposit= 0):\n",
+    "        self.name= name\n",
+    "        self.balance = initialDeposit\n",
+    "        print(f\"\"\"{name} welcome to {self.BANK_NAME}\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "f56038a7-22ac-49a9-a6e9-0b6070afe34c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shubham welcome to SBI\n",
+      "\n",
+      "           ========= SBI =========\n",
+      "           Account Holder : shubham\n",
+      "           Account Balance: 50000\n",
+      "           \n"
+     ]
+    }
+   ],
+   "source": [
+    "pehlaAccount= Account(\"shubham\", 50000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "4cd77758-d890-4592-b529-c61e0940949a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50000"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pehlaAccount.balance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "ce1603ee-4d65-4b87-9b30-dc460f46fa98",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "           ========= SBI =========\n",
+      "           Account Holder : shubham\n",
+      "           Account Balance: 50000\n",
+      "           \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pehlaAccount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "58a0b43d-146d-41c2-8ef1-7ebe7fa19198",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Account():\n",
+    "    BANK_NAME = \"SBI\"\n",
+    "\n",
+    "    def __init__(self, name, initialDeposit= 0):\n",
+    "        # runs when object is created\n",
+    "        self.name= name\n",
+    "        self.balance = initialDeposit\n",
+    "        print(f\"\"\"{name} welcome to {self.BANK_NAME}\"\"\")\n",
+    "        print(self)\n",
+    "    def __str__(self):\n",
+    "        # runs before object is printed\n",
+    "        # mendatory to return a str\n",
+    "        a= f\"\"\"\n",
+    "           ========= {self.BANK_NAME} =========\n",
+    "           Account Holder : {self.name}\n",
+    "           Account Balance: {self.balance}\n",
+    "           \"\"\"\n",
+    "        return a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "65197c8b-fc5d-40ab-b25c-355389bd73fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "harjeet welcome to SBI\n",
+      "\n",
+      "           ========= SBI =========\n",
+      "           Account Holder : harjeet\n",
+      "           Account Balance: 50000\n",
+      "           \n"
+     ]
+    }
+   ],
+   "source": [
+    "pehlaAccount = Account(\"harjeet\", 50000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "13dd0407-fd98-49ac-9e40-eee6232741cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "           ========= SBI =========\n",
+      "           Account Holder : harjeet\n",
+      "           Account Balance: 50000\n",
+      "           \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pehlaAccount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "11a0388b-1d64-4cda-80d8-8f2dfbb94a75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Account():\n",
+    "    BANK_NAME = \"SBI\"\n",
+    "\n",
+    "    def __init__(self, name, initialDeposit= 0):\n",
+    "        self.name= name\n",
+    "        self.balance = initialDeposit\n",
+    "        print(f\"\"\"{name} welcome to {self.BANK_NAME}\"\"\")\n",
+    "        print(self)\n",
+    "    def __str__(self):\n",
+    "        #mendatory to return a str\n",
+    "        a= f\"\"\"\n",
+    "           ========= {self.BANK_NAME} =========\n",
+    "           Account Holder : {self.name}\n",
+    "           Account Balance: {self.balance}\n",
+    "           \"\"\"\n",
+    "        return a\n",
+    "\n",
+    "    def __del__(self):\n",
+    "        # when memory location is cleared\n",
+    "        # runs before object is deleted\n",
+    "        print(\"item was deleted\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "30e3765c-426a-4db7-a704-2a99cc7dd882",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "happy welcome to SBI\n",
+      "\n",
+      "           ========= SBI =========\n",
+      "           Account Holder : happy\n",
+      "           Account Balance: 50000\n",
+      "           \n",
+      "item was deleted\n"
+     ]
+    }
+   ],
+   "source": [
+    "pehlaAccount = Account('happy', 50000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "e73e6355-dcf1-4a9a-8313-0f2a55db9e60",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "item was deleted\n"
+     ]
+    }
+   ],
+   "source": [
+    "del pehlaAccount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "4d6ef51a-ea20-4dfe-83b0-26029e1474e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Account():\n",
+    "    BANK_NAME = \"SBI\"\n",
+    "\n",
+    "    def __init__(self, name, initialDeposit= 0):\n",
+    "        #runs when object is created\n",
+    "        self.name= name\n",
+    "        self.balance = initialDeposit\n",
+    "        print(f\"\"\"{name} welcome to {self.BANK_NAME}\"\"\")\n",
+    "        print(self)\n",
+    "    def __str__(self):\n",
+    "        #mendatory to return a str\n",
+    "        a= f\"\"\"\n",
+    "           ========= {self.BANK_NAME} =========\n",
+    "           Account Holder : {self.name}\n",
+    "           Account Balance: {self.balance}\n",
+    "           \"\"\"\n",
+    "        return a\n",
+    "\n",
+    "    def __del__(self):\n",
+    "        #when memory location is cleared\n",
+    "        # runs before object is created\n",
+    "        a = f\"\"\" ========={self.BANK_NAME}========\n",
+    "         we are sorry to see you go\n",
+    "                     \"\"\"\n",
+    "        print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "2159c3f3-9c5b-4aca-a883-7396d9f617df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "harry welcome to SBI\n",
+      "\n",
+      "           ========= SBI =========\n",
+      "           Account Holder : harry\n",
+      "           Account Balance: 50000\n",
+      "           \n"
+     ]
+    }
+   ],
+   "source": [
+    "pehlaAccount = Account('harry', 50000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "bf6417e0-44de-4f01-a10c-9e7dc2c26acf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Car():\n",
+    "    def __init__(self):\n",
+    "        self.name = \"Tata\"\n",
+    "        print('runs with item is created')\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        print(\"hello\")\n",
+    "        return (\"runs when memory is cleared\")\n",
+    "\n",
+    "    def __del__(self):\n",
+    "        print(\"runs when memory location is cleared\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28fb5111-7124-4c59-9457-1abf23a47f8b",
+   "id": "397b020e-e3d5-41c1-9026-2ce81d7583cb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cc59d04-b160-404f-b3c6-5f70b7edaceb",
+   "metadata": {},
+   "source": [
+    "# Encapsulation\n",
+    "## it put restriction on balance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2aced526-fb65-4592-906b-c36ea7e14f3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Account():\n",
+    "    BANK_NAME = \"SBI\"\n",
+    "\n",
+    "    def __init__(self, name, initialDeposit= 0):\n",
+    "        #runs when object is created\n",
+    "        self.name= name\n",
+    "        self.__balance = initialDeposit\n",
+    "        print(f\"\"\"{name} welcome to {self.BANK_NAME}\"\"\")\n",
+    "        print(self)\n",
+    "    def __str__(self):\n",
+    "        #mendatory to return a str\n",
+    "        a= f\"\"\"\n",
+    "           ========= {self.BANK_NAME} =========\n",
+    "           Account Holder : {self.name}\n",
+    "           Account Balance: {self.__balance}\n",
+    "           \"\"\"\n",
+    "        return a\n",
+    "\n",
+    "    def __del__(self):\n",
+    "        #when memory location is cleared\n",
+    "        # runs before object is created\n",
+    "        a = f\"\"\" ========={self.BANK_NAME}========\n",
+    "                we are sorry see you again\n",
+    "                     \"\"\"\n",
+    "        print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7b5fbb77-2a92-4968-92f2-d2333ca0009e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ankit welcome to SBI\n",
+      "\n",
+      "           ========= SBI =========\n",
+      "           Account Holder : ankit\n",
+      "           Account Balance: 20000\n",
+      "           \n"
+     ]
+    }
+   ],
+   "source": [
+    "pehlaAccount = Account('ankit', 20000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "668b5c4c-86af-4212-ba9f-44abb957c9ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Account' object has no attribute '__balance'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m pehlaAccount\u001b[38;5;241m.\u001b[39m__balance\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Account' object has no attribute '__balance'"
+     ]
+    }
+   ],
+   "source": [
+    "pehlaAccount.__balance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "6ff4bc72-8cec-4215-8c23-cf18e0f983bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "           ========= SBI =========\n",
+      "           Account Holder : ankit\n",
+      "           Account Balance: 20000\n",
+      "           \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pehlaAccount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "0bd6a0fe-6a42-4e14-87af-eb1debfc5ab1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'SBI'"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Account.BANK_NAME"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "f343554c-3862-4af1-a271-47358f626fd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Account():\n",
+    "    BANK_NAME = \"SBI\"\n",
+    "\n",
+    "    def __init__(self, name, initialDeposit= 0):\n",
+    "        #runs when object is created\n",
+    "        self.name= name\n",
+    "        self.__balance = initialDeposit\n",
+    "        print(f\"\"\"{name} welcome to {self.BANK_NAME}\"\"\")\n",
+    "        print(self)\n",
+    "    def __str__(self):\n",
+    "        #mendatory to return a str\n",
+    "        #runs before object is created\n",
+    "        a= f\"\"\"\n",
+    "           ========= {self.BANK_NAME} =========\n",
+    "           Account Holder : {self.name}\n",
+    "           Account Balance: {self.__balance}\n",
+    "           \"\"\"\n",
+    "        return a\n",
+    "\n",
+    "    def __del__(self):\n",
+    "        #when memory location is cleared\n",
+    "        # runs before object is deleted\n",
+    "        a = f\"\"\" ========={self.BANK_NAME}========\n",
+    "                we are sorry to here you go\n",
+    "                     \"\"\"\n",
+    "        print(a)\n",
+    "\n",
+    "    def __transaction(self, amount, T):\n",
+    "        print(f'{amount} was {T}')\n",
+    "        print(f'current balance {self.__balance}')\n",
+    "        if T == 'Credited':\n",
+    "            print(f'initial amount {self.__balance - amount}')\n",
+    "        else:\n",
+    "            print(f'initial amount {self.__balance + amount}')\n",
+    "\n",
+    "    def credit(self, amount= 0):\n",
+    "        self.__balance += amount\n",
+    "        self.__transaction(amount, 'credited')\n",
+    "\n",
+    "    def debit(self, amount= 0):\n",
+    "        if self.__balance > amount:\n",
+    "            self.__balance -= amount\n",
+    "            self.__transaction(amount, 'debited')\n",
+    "            return amount\n",
+    "        else:\n",
+    "            print(\"insufficient balance\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "747caf23-6585-4deb-b368-28316fb19dda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "harjeet welcome to SBI\n",
+      "\n",
+      "           ========= SBI =========\n",
+      "           Account Holder : harjeet\n",
+      "           Account Balance: 5000\n",
+      "           \n",
+      " =========SBI========\n",
+      "                we are sorry to here you go\n",
+      "                     \n"
+     ]
+    }
+   ],
+   "source": [
+    "pehlaAccount = Account(\"harjeet\", 5000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "7fd4ecbf-1acd-4721-90fb-e6bcb8464991",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3000 was credited\n",
+      "current balance 8000\n",
+      "initial amount 11000\n"
+     ]
+    }
+   ],
+   "source": [
+    "pehlaAccount.credit(3000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "90954651-6c76-47f3-b636-1be0b804d21a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Account at 0x25614422660>"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(pehlaAccount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10fe0c93-5687-476a-9762-2f5ca0515f9b",
    "metadata": {},
    "outputs": [],
    "source": []
